--- a/src/nurses/templates/nurse_list.html
+++ b/src/nurses/templates/nurse_list.html
@@ -21,7 +21,7 @@
                     </p>
                 </div>
                 <div class="card-footer text-center">
-                    <a href="{% url 'nurse-detail' nurse.pk %}" class="btn btn-primary">View Profile</a>
+                    <a href="{% url NURSE_DETAIL nurse.pk %}" class="btn btn-primary">View Profile</a>
                 </div>
             </div>
         </div>
