--- a/src/patients/templates/patient_list.html
+++ b/src/patients/templates/patient_list.html
@@ -35,7 +35,7 @@
                     </p>
                 </div>
                 <div class="card-footer text-center">
-                    <a href="{% url 'patient-detail' patient.pk %}" class="btn btn-primary">View Profile</a>
+                    <a href="{% url PATIENT_DETAIL patient.pk %}" class="btn btn-primary">View Profile</a>
                 </div>
             </div>
         </div>
