--- a/src/nurses/templates/nurse_confirm_delete.html
+++ b/src/nurses/templates/nurse_confirm_delete.html
@@ -8,7 +8,7 @@
     <form method="post">
         {% csrf_token %}
         <button type="submit" class="btn btn-danger">Yes, delete</button>
-        <a href="{% url 'nurse-detail' object.pk %}" class="btn btn-secondary">Cancel</a>
+        <a href="{% url NURSE_UPDATE object.pk %}" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
 {% endblock %}
