--- a/src/nurses/templates/nurse_update_form.html
+++ b/src/nurses/templates/nurse_update_form.html
@@ -9,7 +9,7 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Save Changes</button>
-        <a href="{% url 'nurse-list' %}" class="btn btn-secondary">Cancel</a>
+        <a href="{% url NURSE_LIST %}" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
 {% endblock %}
