--- a/src/doctors/templates/doctor_update_form.html
+++ b/src/doctors/templates/doctor_update_form.html
@@ -40,6 +40,11 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="{{ form.license_number.id_for_label }}">License Number</label>
+                    {{ form.license_number|add_class:"form-control" }}
+                </div>
+
+                <div class="form-group">
                     <label for="{{ form.address.id_for_label }}">Address</label>
                     {{ form.address|add_class:"form-control" }}
                 </div>
@@ -64,14 +69,25 @@
                     {{ form.hiring_end_date|add_class:"form-control" }}
                 </div>
 
-                <div class="form-group">
-                    <label for="{{ form.specialty.id_for_label }}">Specialty</label>
-                    {{ form.specialty|add_class:"form-control" }}
-                </div>
-
                 <button type="submit" class="btn btn-primary">Update Doctor</button>
             </form>
         </div>
     </div>
 </div>
+{% if form.errors %}
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        {% for field, field_errors in form.errors.items %}
+            {% for error in field_errors %}
+                toastr.error("{{ error }}", "Error in {{ field|title }}", {
+                    "closeButton": true,
+                    "progressBar": true,
+                    "timeOut": "5000"
+                });
+            {% endfor %}
+        {% endfor %}
+    });
+</script>
+{% endif %}
+
 {% endblock %}
