feat: assign patients to doctors

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -44,6 +44,7 @@
                     <ul class="dropdown-menu" aria-labelledby="doctorDropdown">
                         <li><a class="dropdown-item" href="{% url DOCTOR_CREATE %}">Create Doctor</a></li>
                         <li><a class="dropdown-item" href="{% url DOCTOR_LIST %}">List Doctors</a></li>
+                        <li><a class="dropdown-item" href="{% url ASSIGN_PATIENT %}">Assign Patient</a></li>
                     </ul>
                 </li>
 
