chore: remove duplicate code from search functionality

--- a/src/doctors/templates/assign_patients.html
+++ b/src/doctors/templates/assign_patients.html
@@ -33,6 +33,7 @@
 {% endblock %}
 
 {% block extra_js %}
+<script src="{% static 'js/search.js' %}"></script>
 <script src="{% static 'js/doctor_search.js' %}"></script>
 <script src="{% static 'js/patient_search.js' %}"></script>
 <script src="{% static 'js/assign_patients.js' %}"></script>
