--- a/src/nurses/templates/nurse_form.html
+++ b/src/nurses/templates/nurse_form.html
@@ -4,7 +4,7 @@
 {% load static %}
 {% block content %}
 <div class="form-container">
-    <h2>Register A New Nurse</h2>
+    <h2>Register Nurse</h2>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
 
