--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -69,6 +69,7 @@
                     <ul class="dropdown-menu" aria-labelledby="nurseDropdown">
                         <li><a class="dropdown-item" href="{% url NURSE_CREATE %}">Register Nurse</a></li>
                         <li><a class="dropdown-item" href="{% url NURSE_LIST %}">List Nurses</a></li>
+                        <li><a class="dropdown-item" href="{% url NURSE_ASSIGN %}">Assign Supervisor Nurse</a></li>
                     </ul>
                 </li>
             </ul>
