--- a/src/patients/templates/patient_detail.html
+++ b/src/patients/templates/patient_detail.html
@@ -8,23 +8,46 @@
     <div class="card shadow-sm">
         <div class="card-body">
             <h5 class="card-title">{{ patient.first_name }} {{ patient.last_name }}</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Gender: {{ patient.gender }}</h6>
+            <h6 class="card-subtitle mb-2 text-muted">Gender: {{ patient.get_gender_display }}</h6>
             <p class="card-text">
                 <strong>Date of Birth:</strong> {{ patient.date_of_birth }}<br>
                 <strong>Email:</strong> {{ patient.email }}<br>
                 <strong>Phone:</strong> {{ patient.phone_number }}<br>
-                <strong>Address:</strong> {{ patient.address.street_address }}, {{ patient.address.city }},
-                {{ patient.address.state }}, {{ patient.address.postal_code }}, {{ patient.address.country }}<br>
+                <strong>Address:</strong>
+                {% if patient.address %}
+                {{ patient.address.street_address }}, {{ patient.address.city }},
+                {{ patient.address.state }}, {{ patient.address.postal_code }},
+                {{ patient.address.country }}
+                {% else %}
+                Not Provided
+                {% endif %}<br>
+                <strong>Emergency Contact:</strong>
+                {% if patient.emergency_contact %}
+                {{ patient.emergency_contact.first_name }} {{ patient.emergency_contact.last_name }} -
+                {{ patient.emergency_contact.phone_number }}
+                {% else %}
+                Not Provided
+                {% endif %}<br>
+
                 <strong>Insurance Provider:</strong> {{ patient.insurance_provider }}<br>
-                <strong>Insurance Policy Number:</strong> {{ patient.insurance_policy_number }}<br>
+                <strong>Department:</strong> {{ patient.get_department_display }}<br>
+                <strong>Room Number:</strong> {{ patient.room_number }}<br>
                 <strong>Last Visit Date:</strong> {{ patient.last_visit_date }}<br>
                 <strong>Primary Care Physician:</strong> {{ patient.primary_care_physician }}<br>
                 <strong>Allergies:</strong> {{ patient.allergies }}<br>
                 <strong>Medical History:</strong> {{ patient.medical_history }}<br>
                 <strong>Status:</strong> {{ patient.status }}<br>
+                <strong>Doctors:</strong>
+            <ul>
+                {% for doctor in patient.doctors.all %}
+                <li>{{ doctor.first_name }} {{ doctor.last_name }}</li>
+                {% empty %}
+                <li>No doctors assigned.</li>
+                {% endfor %}
+            </ul>
             </p>
-            <a href="{% url 'patient-update' patient.pk %}" class="btn btn-warning">Edit Profile</a>
-            <a href="{% url 'patient-delete' patient.pk %}" class="btn btn-danger" onclick="return confirmDelete()">
+            <a href="{% url PATIENT_UPDATE patient.pk %}" class="btn btn-warning">Edit Profile</a>
+            <a href="{% url PATIENT_DELETE patient.pk %}" class="btn btn-danger" onclick="return confirmDelete()">
                 Delete Profile</a>
         </div>
     </div>
